# OctoRun

./: CLAUDE.md  README.md  pyproject.toml
src/octorun/: __init__.py  cli.py  default_config.json  gpu_benchmark.py  lock_manager.py  runner.py  status.py
src/octorun/benchmarks/: compute_benchmark.py  memory_benchmark.py
src/octorun/skill/: SKILL.md
tests/: dummy_script.py  test_lock_manager.py  test_runner.py
